# frankenstein

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md  development.md  test-coverage-proposal.md  test-strategy.md
src/film_tracks_aligner/: cli.py  models.py
src/film_tracks_aligner/mkv/: extractor.py  inspector.py  muxer.py
src/film_tracks_aligner/subtitle/: adjuster.py
src/film_tracks_aligner/sync/: aligner.py  applier.py
src/film_tracks_aligner/tui/: app.py
src/film_tracks_aligner/tui/screens/: processing.py  theme_select.py  track_select.py
src/frankenstein/: cli.py
src/frankenstein/mkv/: extractor.py  inspector.py  muxer.py
src/frankenstein/subtitle/: adjuster.py
src/frankenstein/sync/: aligner.py  analyzer.py  applier.py
src/frankenstein/tui/: app.py
src/frankenstein/tui/screens/: track_select.py
tests/: audio_harness.py  scenarios.py  test_cli_confidence_messages.py  test_cut_detection.py  test_directory_mode.py  test_gap_fill.py  test_linear_alignment.py  test_path_selection.py  test_real_media_matrix.py  test_scenario_catalog.py  test_subtitle_adjuster.py
