[project]
name = "frankenstein"
version = "0.1.0"
description = "CLI to merge video and audio tracks from two MKV files with automatic audio synchronization"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "textual>=0.80",
    "librosa>=0.10",
    "numpy>=1.26",
    "scipy>=1.13",
    "soundfile>=0.12",
    "ffmpeg-python>=0.2",
]

[project.scripts]
frankensync = "film_tracks_aligner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/film_tracks_aligner"]

[tool.hatch.metadata]
allow-direct-references = true
